// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExternalLink overview 1 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: #5c6ac4;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}

<a
    class="emotion-0"
    href="https://joshua.us"
    rel="noopener noreferrer"
    target="_blank"
  >
    https://joshua.us
  </a>
</DocumentFragment>
`;

exports[`ExternalLink overview 2 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: #5c6ac4;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}

<a
    class="emotion-0"
    href="https://lurline.us"
    rel="noopener noreferrer"
    target="_blank"
  >
    https://lurline.us
  </a>
</DocumentFragment>
`;

exports[`ExternalLink overview 3 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: #5c6ac4;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}

<a
    class="emotion-0"
    href="http://bernadette.info"
    rel="noopener noreferrer"
    target="_blank"
  >
    http://bernadette.info
  </a>
</DocumentFragment>
`;

exports[`ExternalLink overview 4 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: #5c6ac4;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}

<a
    class="emotion-0"
    href="http://chance.info"
    rel="noopener noreferrer"
    target="_blank"
  >
    http://chance.info
  </a>
</DocumentFragment>
`;

exports[`ExternalLink overview 5 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: #5c6ac4;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}

<a
    class="emotion-0"
    href="https://effie.us"
    rel="noopener noreferrer"
    target="_blank"
  >
    https://effie.us
  </a>
</DocumentFragment>
`;
